sorted problem with splash page, adjusted vote box z-index, fixes #155

--- a/VoxPop/Site/Content/Site.css
+++ b/VoxPop/Site/Content/Site.css
@@ -3,7 +3,6 @@
 
 body {
     margin: 0px;
-    min-height: 100%;
 }
 
 * {
@@ -17,14 +16,16 @@ a {
 }
 
 .global-hr-line {
-    margin-top: 20%;
-    margin-bottom: -19%;
+    position: relative;
+    z-index: -1000;
+    clear: both;
+    margin-top: 22%;
+    margin-bottom: -21%;
 }
 
 .global-footer {
-   padding-bottom: 16px;
+    padding-bottom: 16px;
 }
-
 
 .Logo {
     background: url('../Images/VPlogoVec.svg') no-repeat;
@@ -355,7 +356,7 @@ img {
     border-radius: 50%;
     -webkit-shape-outside: circle(50%);
     shape-outside: circle(50%);
-    margin-left:-30px;
+    margin-left: -30px;
 }
 
 .story-modal-headings {
